# managing-dependencies-using-uv-and-pixi

./: .nojekyll  README.md  _brand.yml  _quarto.yml  index.html  index.qmd  robots.txt  search.json  sitemap.xml
assets/: styles.scss
playground/: compose.yml  justfile  tmux.conf
playground/conda_demo/: Containerfile  Dockerfile
playground/conda_demo/files/: .bashrc
playground/conda_demo/files/conda_demo/: environment.yml
playground/conda_demo/files/conda_demo_updated_on_linux/: environment.yml
playground/conda_demo/files/from_mac/: environment.yml
playground/conda_demo/files/updated_on_mac/conda_demo/: my_script.py
playground/pip/: Dockerfile
playground/pip/skeleton/: .bashrc  my_script.py  requirements.txt
playground/pip_demo/: Containerfile  Dockerfile  Makefile
playground/pip_demo/files/: .bashrc
playground/pixi_demo/: Containerfile  Dockerfile  Makefile  compose.yml
playground/pixi_demo/files/: .bashrc
playground/pixi_lib_demo/: Dockerfile
playground/pixi_lib_demo/files/: .bashrc
playground/pixi_lib_demo/files/.jupyter/: jupyter_server_config.py
playground/pixi_lib_demo/files/pixi_demo_backup/: pixi.toml
playground/pixi_lib_demo/files/pixi_lib_demo/: pyproject.toml
playground/pixi_lib_demo/files/pixi_lib_demo/notebooks/: example_notebook.ipynb
playground/pixi_lib_demo/files/pixi_lib_demo/src/my_project/: probability.py
playground/pixi_project_demo/: Containerfile
playground/pixi_project_demo/files/: .bashrc
playground/pixi_project_demo/files/.jupyter/: jupyter_server_config.py
playground/pixi_project_demo/files/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: themes.jupyterlab-settings
playground/pixi_project_demo/files/.jupyter/lab/user-settings/@jupyterlab/fileeditor-extension/: plugin.jupyterlab-settings
playground/pixi_project_demo/files/.jupyter/lab/user-settings/@jupyterlab/terminal-extension/: plugin.jupyterlab-settings
playground/pixi_project_demo/files/pixi_project_demo/: pyproject.toml
playground/pixi_project_demo/files/pixi_project_demo/notebooks/: example_notebook.ipynb
playground/pixi_project_demo/files/pixi_project_demo/src/my_project/: probability.py
playground/uv/: Dockerfile
playground/uv/skeleton/: .bashrc
playground/uv_demo/: Containerfile  Dockerfile  Makefile
playground/uv_demo/files/: .bashrc
playground/uv_lib_demo/: Dockerfile  compose.yml
playground/uv_lib_demo/files/: .bashrc
playground/uv_lib_demo/files/.jupyter/: jupyter_server_config.py
playground/uv_lib_demo/files/uv_lib_demo/: pyproject.toml
playground/uv_lib_demo/files/uv_lib_demo/src/my_project/: probability.py
playground/uv_lib_demo/files/uv_script_demo/: my_script.py
playground/uv_project_demo/: Containerfile
playground/uv_project_demo/files/: .bashrc
playground/uv_project_demo/files/.jupyter/: jupyter_server_config.py
playground/uv_project_demo/files/.jupyter/lab/user-settings/@jupyterlab/apputils-extension/: notification.jupyterlab-settings
playground/uv_project_demo/files/uv_script_demo/: my_script.py
site_libs/bootstrap/: bootstrap-0d5e872819c6436bdcf2a57d447defe0.min.css  bootstrap-471ebaf7a3d597d4f528c663ca2d64de.min.css  bootstrap-784e8e74e7ccf96bd114305a2643b3ca.min.css  bootstrap-a14e558d207a23e48518824be2dd8ac6.min.css
slides/: _metadata.yml
slides/assets/: styles.scss
slides/pixi/: index.html  index.qmd
slides/rsecon/: index.html  index.qmd
slides/uv/: index.html  index.qmd
