[project]
name = "my-project"
version = "0.1.0"
description = "My data science project"
readme = "README.md"
authors = [
    { name = "James Thomas", email = "j.thomas@bristol.ac.uk" }
]
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.2",
    "scipy>=1.15.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
test-coin = "my_project.probability:test_coin"
